Fixed an issue with two overflow scroll bars.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -13,6 +13,7 @@
 }
 
 #map-images {
+  padding-left: 50px;
   height: 700px;
   overflow: auto;
 }
